Fixed all properties dropdown issue and meeting having a gap issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -3560,8 +3560,8 @@ video {
 
 .nav .start-home,
 .third-en:hover ~ .animation2 {
-  width: 135px;
-  left: 198px;
+  width: 122px;
+  left: 196px;
 }
 
 .nav .start-home-ar,
@@ -3572,8 +3572,8 @@ video {
 
 .nav .start-home-ar,
 .second-ar:hover ~ .animation2 {
-  width: 43px;
-  left: 97px;
+  width: 41px;
+  left: 99px;
 }
 
 .nav .start-home-ar,
